Major smooth over of detail throughout, which therefore breaks various things wrt. compatibility with 1.0.0:
- added note to Appx. A re. terminology (e.g., "must", "may", etc.)
- removed design notes from Appx. (will move into wiki); smoothed
  over format of what is then instruction equiv. Appx. (allowing
  expansion and maintenance)
- numerous updates to written content
- added field to each instruction spec. for compatibility with
  base ISA; started to fill those with known cases
- removed constant-time flag in CSR: now constant-time without
  condition,
- reordered ID bits in uxcrypto to match order in spec.
- moved xc.bop fields from uxcrypto into ubop CSR
- added ufenl CSR, plus xc.fenl instruction
- added SM4 instruction proposal placeholder
- added XOR-and-shift type bit-oriented instruction placeholders
- moved content from features background into instruction spec.
- split shared encoding detail into dedicated section

--- a/doc/tex/appx-notation.tex
+++ b/doc/tex/appx-notation.tex
@@ -1,5 +1,48 @@
 % =============================================================================
 
+\subsection{Terminology}
+
+\begin{itemize}
+
+\item We attempt to follow, 
+      e.g., \cite{SCARV:RFC:2119}, 
+      in the sense that
+
+      \begin{itemize}
+      \item {\em        must} (resp. {\em must   not}),
+      \item {\em       shall} (resp. {\em shall  not}),
+      \item {\em      should} (resp. {\em should not}),
+      \item {\em         may},
+      \item {\em    required}, 
+      \item {\em recommended}, 
+            and 
+      \item {\em    optional}
+      \end{itemize}
+      
+      \noindent
+      all have a precise interpretation.  
+
+\item We attempt to follow, 
+      e.g., \cite{SCARV:ARMglossary:20},
+      in the sense that
+
+      \begin{itemize}
+      \item {\em                reserved}
+            is interpreted as
+            ``an implementation {\em should not} use or rely on $X$'',
+            and
+      \item {\em implementation specific}
+            is interpreted as
+            ``$X$ is not architecturally defined, so an implementation (i.e., micro-architecture) {\em may} specialise it to suit''.
+      \end{itemize}
+
+      \noindent
+      for some feature or field $X$.
+
+\end{itemize}
+
+% -----------------------------------------------------------------------------
+
 \subsection{General}
 
 \begin{itemize}
