--- a/doc/tex/appx-related.tex
+++ b/doc/tex/appx-related.tex
@@ -22,10 +22,11 @@
 \cite{SCARV:RCSBKBLI:09}
 \cite{SCARV:ManGre:10,SCARV:ManMagGre:10,SCARV:Manley:11}
 
-\subsection*{ISEs for arithmetic: $\B{Z}_{N}$ and general multi-precision}
+\subsection*{ISEs for arithmetic: $\B{Z}_{N}$   and general multi-precision}
 \cite{SCARV:Gro:02,SCARV:Gro:03,SCARV:GroKam:03:a,SCARV:GAST:05,SCARV:GroTilSze:07}
-\subsection*{ISEs for arithmetic: $\B{F}_{2^m}$ and other fields (e.g., for ECC)}
-\cite{SCARV:GroKam:03:b,SCARV:FisLee:04,SCARV:GroKumPaa:04,SCARV:KumPaa:04,SCARV:BBGM:08}
+\subsection*{ISEs for arithmetic: $\B{F}_{2^m}$, $\B{F}_{p}$ etc.}
+\cite{SCARV:GroKam:03:b,SCARV:FisLee:04,SCARV:GroKumPaa:04,SCARV:KumPaa:04,SCARV:BBGM:08,SCARV:AELNP:20}
+
 \subsection*{ISEs for arithmetic: misc}
 \cite{SCARV:GroKam:03,SCARV:GroSav:04,SCARV:VejPagGro:07}
 
