--- a/doc/spec.tex
+++ b/doc/spec.tex
@@ -1,10 +1,7 @@
 \documentclass{scarv-report}
 
 \title{{\sc \XCRYPTO: a cryptographic ISE for RISC-V} \\ {\sc\large Specification Document}}
-\date{
-    Version $\import{build/spec}{spec.version}$ (\today) \\
-    {\small \tt \import{build/spec}{spec.commit}}
-}
+\date{Version $\import{build/spec}{spec.version}$ (\today) \\ {\small\tt \import{build/spec}{spec.commit}}}
 \author{Ben Marshall}
 \author{Daniel Page}
 \author{Thinh Pham}
@@ -44,9 +41,8 @@ Bristol, BS8 1UB, United Kingdom.\\
 
 \import{./tex/}{spec-state.tex}
 \import{./tex/}{spec-exception.tex}
+\import{./tex/}{spec-encoding.tex}
 \import{./tex/}{spec-instruction.tex}
-\import{./tex/}{spec-shared-bitmanip.tex}
-\import{./tex/}{spec-shared-dsp.tex}
 
 % =============================================================================
 
@@ -69,12 +65,6 @@ Bristol, BS8 1UB, United Kingdom.\\
 \import{./tex/}{appx-related.tex}
 
 \clearpage
-\section{Design notes (or FAQs)}
-\label{appx:design}
-
-\import{./tex/}{appx-design.tex}
-
-\clearpage
 \section{Instruction syntax   overview}
 \label{appx:instr_syntax}
 
@@ -85,6 +75,12 @@ Bristol, BS8 1UB, United Kingdom.\\
 \label{appx:instr_encode}
 
 \import{./tex/}{appx-instr_encode.tex}
+
+\clearpage
+\section{Instruction equivalents}
+\label{appx:instr_equiv}
+
+\import{./tex/}{appx-instr_equiv.tex}
 
 % =============================================================================
 
