--- a/doc/tex/appx-instr_syntax.tex
+++ b/doc/tex/appx-instr_syntax.tex
@@ -6,8 +6,7 @@
 \hline                                                                             
 Class                 & Syntax                          & Section                                    \\
 \hline\hline                                                                             
-\multirow{12}{*}{1}   
-                      & \XCRYPTOSYNTAXUSE{xc.ldr.bu}    & \REFSEC{sec:spec:instruction:xc.ldr.bu}    \\
+\multirow{12}{*}{1}   & \XCRYPTOSYNTAXUSE{xc.ldr.bu}    & \REFSEC{sec:spec:instruction:xc.ldr.bu}    \\
                       & \XCRYPTOSYNTAXUSE{xc.ldr.b}     & \REFSEC{sec:spec:instruction:xc.ldr.b}     \\
                       & \XCRYPTOSYNTAXUSE{xc.ldr.hu}    & \REFSEC{sec:spec:instruction:xc.ldr.hu}    \\
                       & \XCRYPTOSYNTAXUSE{xc.ldr.h}     & \REFSEC{sec:spec:instruction:xc.ldr.h}     \\
@@ -25,7 +24,7 @@ Class                 & Syntax                          & Section               
 \label{tab:instr_syntax:1}
 \end{table}                                                                      
 
-% -----------------------------------------------------------------------------
+% =============================================================================
 
 \begin{table}[!ht]
 \begin{center}
@@ -43,7 +42,7 @@ Class                 & Syntax                          & Section               
 \label{tab:instr_syntax:2:1}
 \end{table}                                                                      
 
-% -----------------------------------------------------------------------------
+% =============================================================================
 
 \begin{table}[!ht]
 \begin{center}
@@ -62,7 +61,7 @@ Class                 & Syntax                          & Section               
 \label{tab:instr_syntax:2:2}
 \end{table}                                                                      
 
-% -----------------------------------------------------------------------------
+% =============================================================================
 
 \begin{table}[!ht]
 \begin{center} 
@@ -70,9 +69,12 @@ Class                 & Syntax                          & Section               
 \hline                                                                             
 Class                 & Syntax                          & Section                                    \\
 \hline\hline                                                                             
-\multirow{ 7}{*}{2.3} 
-                      & \XCRYPTOSYNTAXUSE{xc.bop}       & \REFSEC{sec:spec:instruction:xc.bop}       \\
+\multirow{ 6}{*}{2.3} & \XCRYPTOSYNTAXUSE{xc.bop}       & \REFSEC{sec:spec:instruction:xc.bop}       \\
                       & \XCRYPTOSYNTAXUSE{xc.lut}       & \REFSEC{sec:spec:instruction:xc.lut}       \\
+                      & \XCRYPTOSYNTAXUSE{xc.xsll.i}    & \REFSEC{sec:spec:instruction:xc.xsll.i}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.xsrl.i}    & \REFSEC{sec:spec:instruction:xc.xsrl.i}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.xrol.i}    & \REFSEC{sec:spec:instruction:xc.xrol.i}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.xror.i}    & \REFSEC{sec:spec:instruction:xc.xror.i}    \\
 \hline                                                                             
 \end{tabular}
 \end{center}
@@ -80,7 +82,7 @@ Class                 & Syntax                          & Section               
 \label{tab:instr_syntax:2:3}
 \end{table}                                                                      
 
-% -----------------------------------------------------------------------------
+% =============================================================================
 
 \begin{table}[!ht]
 \begin{center}
@@ -88,7 +90,7 @@ Class                 & Syntax                          & Section               
 \hline                                                                             
 Class                 & Syntax                          & Section                                    \\
 \hline\hline                                                                             
-\multirow{15}{*}{2.4} & \XCRYPTOSYNTAXUSE{xc.padd}      & \REFSEC{sec:spec:instruction:xc.padd}      \\
+\multirow{12}{*}{2.4} & \XCRYPTOSYNTAXUSE{xc.padd}      & \REFSEC{sec:spec:instruction:xc.padd}      \\
                       & \XCRYPTOSYNTAXUSE{xc.psub}      & \REFSEC{sec:spec:instruction:xc.psub}      \\
                       & \XCRYPTOSYNTAXUSE{xc.pmul.l}    & \REFSEC{sec:spec:instruction:xc.pmul.l}    \\
                       & \XCRYPTOSYNTAXUSE{xc.pmul.h}    & \REFSEC{sec:spec:instruction:xc.pmul.h}    \\
@@ -107,7 +109,7 @@ Class                 & Syntax                          & Section               
 \label{tab:instr_syntax:2:4}
 \end{table}                                                                      
 
-% -----------------------------------------------------------------------------
+% =============================================================================
 
 \begin{table}[!ht]
 \begin{center}
@@ -115,8 +117,7 @@ Class                 & Syntax                          & Section               
 \hline                                                                             
 Class                 & Syntax                          & Section                                    \\
 \hline\hline                                                                         
-\multirow{15}{*}{2.5} 
-                      & \XCRYPTOSYNTAXUSE{xc.madd.3}    & \REFSEC{sec:spec:instruction:xc.madd.3}    \\
+\multirow{ 5}{*}{2.5} & \XCRYPTOSYNTAXUSE{xc.madd.3}    & \REFSEC{sec:spec:instruction:xc.madd.3}    \\
                       & \XCRYPTOSYNTAXUSE{xc.msub.3}    & \REFSEC{sec:spec:instruction:xc.msub.3}    \\
                       & \XCRYPTOSYNTAXUSE{xc.macc.1}    & \REFSEC{sec:spec:instruction:xc.macc.1}    \\
                       & \XCRYPTOSYNTAXUSE{xc.mmul.3}    & \REFSEC{sec:spec:instruction:xc.mmul.3}    \\
@@ -128,7 +129,23 @@ Class                 & Syntax                          & Section               
 \label{tab:instr_syntax:2:5}
 \end{table}                                                                      
 
-% -----------------------------------------------------------------------------
+% =============================================================================
+
+\begin{table}[!ht]
+\begin{center}
+\begin{tabular}{|c|l|l|}
+\hline                                                                             
+Class                 & Syntax                          & Section                                    \\
+\hline\hline                                                                         
+\multirow{ 1}{*}{2.6} & \XCRYPTOSYNTAXUSE{xc.fenl}      & \REFSEC{sec:spec:instruction:xc.fenl}      \\
+\hline                                                                             
+\end{tabular}
+\end{center}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $2.6$, per \REFSEC{sec:spec:instruction:2:6}.}
+\label{tab:instr_syntax:2:6}
+\end{table}                                                                      
+
+% =============================================================================
 
 \begin{table}[!ht]
 \begin{center}
@@ -143,8 +160,9 @@ Class                 & Syntax                          & Section               
 \end{center}
 \caption{An overview of instruction syntax, including reference to associated semantics: class $3.1$, per \REFSEC{sec:spec:instruction:3:1}.}
 \label{tab:instr_syntax:3:1}
-\end{table}                                                                      
-% -----------------------------------------------------------------------------
+\end{table}                                                                    
+
+% =============================================================================
 
 \begin{table}[!ht]
 \begin{center}
@@ -160,7 +178,8 @@ Class                 & Syntax                          & Section               
 \caption{An overview of instruction syntax, including reference to associated semantics: class $3.2$, per \REFSEC{sec:spec:instruction:3:2}.}
 \label{tab:instr_syntax:3:2}
 \end{table}                                                                      
-% -----------------------------------------------------------------------------
+
+% =============================================================================
 
 \begin{table}[!ht]
 \begin{center}
@@ -168,7 +187,7 @@ Class                 & Syntax                          & Section               
 \hline                                                                             
 Class                 & Syntax                           & Section                                   \\
 \hline\hline                                                                         
-\multirow{ 2}{*}{3.3} & \XCRYPTOSYNTAXUSE{xc.sha3.xy}    & \REFSEC{sec:spec:instruction:xc.sha3.xy}  \\
+\multirow{ 5}{*}{3.3} & \XCRYPTOSYNTAXUSE{xc.sha3.xy}    & \REFSEC{sec:spec:instruction:xc.sha3.xy}  \\
                       & \XCRYPTOSYNTAXUSE{xc.sha3.x1}    & \REFSEC{sec:spec:instruction:xc.sha3.x1}  \\
                       & \XCRYPTOSYNTAXUSE{xc.sha3.x2}    & \REFSEC{sec:spec:instruction:xc.sha3.x2}  \\
                       & \XCRYPTOSYNTAXUSE{xc.sha3.x4}    & \REFSEC{sec:spec:instruction:xc.sha3.x4}  \\
@@ -178,6 +197,22 @@ Class                 & Syntax                           & Section              
 \end{center}
 \caption{An overview of instruction syntax, including reference to associated semantics: class $3.3$, per \REFSEC{sec:spec:instruction:3:3}.}
 \label{tab:instr_syntax:3:3}
+\end{table}                                                                      
+
+% =============================================================================
+
+\begin{table}[!ht]
+\begin{center}
+\begin{tabular}{|c|l|l|}
+\hline                                                                             
+Class                 & Syntax                           & Section                                   \\
+\hline\hline                                                                         
+\multirow{ 1}{*}{3.4} & \XCRYPTOSYNTAXUSE{xc.sm4sub}     & \REFSEC{sec:spec:instruction:xc.sm4sub}   \\
+\hline                                                                             
+\end{tabular}
+\end{center}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $3.4$, per \REFSEC{sec:spec:instruction:3:4}.}
+\label{tab:instr_syntax:3:4}
 \end{table}                                                                      
 
 % =============================================================================
