--- a/doc/tex/bg-concept.tex
+++ b/doc/tex/bg-concept.tex
@@ -5,9 +5,9 @@
 
 \begin{itemize}
 
-\item Assuming carte blanche wrt. design and implementation of a processor 
-      core, and the wider system it is coupled to, a large design space of 
-      candidate approaches exists.  One could, for example, realise a given 
+\item Assuming carte blanche wrt. design and implementation of some processor
+      core, and the wider system it is coupled to, a significant design space 
+      of candidate approaches exists.  For example, one could realise a given 
       cryptographic primitive using
       a) hardware-only,
       b) mixed (or hybrid),
@@ -15,13 +15,13 @@
       c) software-only
       techniques.
 
-      The remit of \XCRYPTO is strictly focused on an approach that supports the
-      latter techniques; one could view said remit as focused on maximising
+      The remit of \XCRYPTO is strictly focused on providing support for the
+      latter techniques; one could view said remit as focused on maximising 
       the viability of software-based cryptographic implementations.  It has
       an implicit focus on constrained, e.g., micro-controller class, cores, 
-      although the concept and utility is broader.
+      although the concept and utility is arguably broader.
       Various published work is emerging that motivates and/or evidences such
-      an approach: 
+      an approach: in the specific context of RISC-V,
       see, e.g.,~\cite{SCARV:Stoffelen:19}.
 
 \item The following design criteria rationalise this approach, some of which
@@ -33,31 +33,34 @@
             to a second-class design metric, and so, by implication, viewed 
             as being of secondary importance;
             see, e.g., \cite{SCARV:Lee:03,SCARV:RKLMR:03,SCARV:RRKH:04,SCARV:BurMutTiw:16}.
-            In contrast, \XCRYPTO treats security as a first-class metric, and
-            so {\em at least} as important as more traditional alternatives.
+            Modulo the limitations as an ISE, \XCRYPTO contrasts by treating
+            security as a first-class metric and so at least as important as 
+            more traditional alternatives.
             For example,
             within the context of \XCRYPTO we deem it reasonable to trade-off 
             improved security vs. degradation of instruction throughput.
       \item {\bf      Consistency}.
-            As far as is reasonable, \XCRYPTO should remain consistent with the
-            RISC-V philosophy, and associated base ISA; doing so will demand 
+            As far as reasonable, \XCRYPTO is consistent with the overarching
+            RISC-V philosophy, and associated base ISA.  Doing so will demand 
             considered compromises vs. a clean-slate design, but, equally,
             should maximise the resulting utility.
             For example,
-            we attempt to avoid or minimise 
+            we attempt to minimise 
             a) deviation from the existing instruction encoding formats,
                and 
             b) introduction of additional state.
       \item {\bf       Generality}.
-            \XCRYPTO should be a general-purpose cryptographic ISE: bar certain
-            controlled (i.e., well motivated) instances, it avoids including 
-            (overly) functionality-specific features.
+            \XCRYPTO aims to be 
+            general-purpose,
+            in the sense it attempts to avoid
+            inclusion of overly functionality-specific features.
       \item {\bf      Flexibility}. 
-            Modulo the status of security as a first-class design metric, a
-            goal of \XCRYPTO remains to avoid, or at least minimise any ``baked 
-            in'' (or hard coded) trade-offs.  Put another way, although the 
-            approach used clearly {\em will} imply trade-offs 
-            (e.g., vs. efficiency typically delivered by hardware-only techniques), 
+            \XCRYPTO aims to be
+            flexible,
+            in the sense it attempts to avoid
+            ``baked in'' (or hard coded) trade-offs.
+            Put another way, although the design {\em will} imply trade-offs 
+            (e.g., vs. efficiency, typically delivered by hardware-only techniques), 
             it {\em should} more easily support
             a) agility wrt. primitive, algorithm, and parameter choices,
                and
@@ -66,22 +69,15 @@
             To mitigate a given attack, a layered approach (cf. defence in 
             depth) is normally preferred: this favours the use of multiple
             countermeasures, vs. a single, perfect panacea.  The same form
-            of argument applies to efficiency, in the sense that efficiency 
+            of argument applies to efficiency, in the sense that efficiency
             requirements may render software-only implementation techniques,
             even {\em with} support of \XCRYPTO, insufficient.
             As such, \XCRYPTO
             a) should be viewed as one option for or layer in a solution,
                and
             b) prefers features that can co-exist over those which cannot.
-            For example, 
-            Grabher et al.~\cite{SCARV:GGHJPTW:11} have explored the use of 
-            an embedded FPGA fabric\footnote{
-            See, e.g., \url{http://www.flex-logix.com}
-            } to support cryptographic workloads: \XCRYPTO composes with such 
-            an approach.
       \item {\bf Implementability}. 
-            To be useful, it should be possible to implement \XCRYPTO with as
-            little
+            It should be possible to implement \XCRYPTO with as little
             a) overhead   (e.g., wrt. additional logic),
                and
             b) difficulty (e.g., wrt. outright complexity, or complicating factors such as verification)
@@ -89,31 +85,26 @@
             a {\em requirement} for complex hardware or invasive alteration 
             to the host core.
       \item {\bf    Measurability}.
-            Given the remit of extending the base ISA, any feature in \XCRYPTO 
+            Given the remit of extending a base ISA, any feature in \XCRYPTO 
             should offer reproducible, demonstrable value vs. this baseline.
             For a given feature, this goal should be supported by provision 
             of associated reference implementations of cryptographically 
             interesting benchmark kernels.
       \end{itemize}
 
-\item Aligning with several cited design criteria, \XCRYPTO can be viewed as a 
-      form of {\em meta}-extension in the sense it captures feature classes 
-      that can be selected from to suit.  \REFSEC{sec:bg:feature} outlines 
-      said feature classes, the presence or absence of which is reflected 
-      in an associated CSR outlined in \REFSEC{sec:spec:state:csr}.
+\item Aligning with several cited design criteria, \XCRYPTO can be viewed as
+      a form of {\em meta}-extension: it is organised into a set of feature 
+      {\em classes} (or sub-extensions), which can be selected from to suit.
+      Note that
+      \REFSEC{sec:bg:feature} 
+      provides a high-level description of and motivation for said feature
+      classes, and an associated CSR described in 
+      \REFSEC{sec:spec:state}
+      facilitates feature identification.
 
-\item All that said, such an approach may naturally be deemed inappropriate 
-      for some use-cases due to the trade-offs implied; we carefully pitch 
-      \XCRYPTO as {\em an} approach, not {\em the} approach.  
-      As such, instances of alternative approaches will naturally exist and
-      be perfectly valid.  For example,
-      a) the RISC-V Cryptographic Extensions Task Group is focused on use 
-         of the vector ISE as a vehicle for cryptographic operations,
-      b) many commercialised SoCs 
-         (e.g., Google Titan) 
-         prefer to couple a dedicated, special-purpose IP core 
-         (e.g., a hardware-based AES accelerator) 
-         to a RISC-V host core.
+\item All that said, \XCRYPTO may naturally be deemed {\em in}appropriate 
+      for some use-cases; acknowledging this fact, we carefully pitch it 
+      as {\em an} approach rather than {\em the} approach.
 
 \end{itemize}
 
